gap fixed

--- a/css/index.css
+++ b/css/index.css
@@ -164,7 +164,7 @@ li {
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 10px;
+    gap: 20px;
   }
 }
 .container1 {
